--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/storage/*
+public/fonts/vendor
+public/js/app.js
+public/css/app.css
+public/mix-manifest.json
